unpackaged/main/default/objects/ContactPointPhone/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not contact this specific phone number</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>