unpackaged/main/default/objects/ContactPointPhone/fields/Phone_No_Longer_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Phone_No_Longer_In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone No Longer In Use</label>
    <type>Checkbox</type>
</CustomField>