unpackaged/main/default/objects/ContactPointPhone/fields/Phone_Notes__c.field-meta.xml
<CustomField>
    <fullName>Phone_Notes__c</fullName>
    <inlineHelpText>Additional notes that don&#39;t belong in Source (e.g., prefers text only)</inlineHelpText>
    <label>Phone Notes</label>
    <type>TextArea</type>
</CustomField>