unpackaged/main/default/objects/ContactPointPhone/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Source of this specific phone number</inlineHelpText>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>