unpackaged/main/default/objects/ContactPointPhone/fields/X18_Char_ID_Phone__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_ID_Phone__c</fullName>
    <formula>CASESAFEID (Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Char ID Phone</label>
    <type>Text</type>
</CustomField>